--- a/analyse_acc_data_300720.ipynb
+++ b/analyse_acc_data_300720.ipynb
@@ -135,7 +135,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# Create new Excel workbook\n",
@@ -152,9 +154,20 @@
     "d, file_names = sorted_dict(all_files)\n",
     "\n",
     "# Ask User for header of timestamp, of acc values\n",
-    "t_header = input(\"Please input the name of the header for the timestamp column (CASE-SENSITIVE): \")\n",
-    "acc_header = input(\"Please input the name of the header for the acceleration column (CASE-SENSITIVE): \")\n",
-    "excel_wb_name = input(\"An excel workbook will be created. Please input your preferred name (CASE-SENSITIVE): \")\n",
+    "while True:\n",
+    "    try:\n",
+    "        t_header = input(\"Please input the name of the header for the timestamp column (CASE-SENSITIVE): \")\n",
+    "        acc_header = input(\"Please input the name of the header for the acceleration column (CASE-SENSITIVE): \")\n",
+    "        excel_wb_name = input(\"An excel workbook will be created. Please input your preferred name (CASE-SENSITIVE): \")\n",
+    "        format_acc = input(\"Are acceleration values in terms of g? (I.e. '1' = 9.81ms^-2) [Y]/[N]: \")\n",
+    "        if format_acc.lower() == 'y' or format_acc.lower() == 'n':\n",
+    "            pass\n",
+    "        confirm = input(\"Confirm input? [Y]/[N]: \")\n",
+    "        if confirm.lower() == 'y':\n",
+    "            break\n",
+    "    except:\n",
+    "        print(\"Invalid input\")\n",
+    "    \n",
     "print(\"File is running...\")\n",
     "\n",
     "try:\n",
@@ -181,7 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def format_headers(df):\n",
+    "def format(df, format_acc):\n",
     "    \n",
     "# Format headers as long as the first row is not a numerical value\n",
     "# Note: Headers are not considered as the first row\n",
@@ -193,7 +206,13 @@
     "        header = df.iloc[0]\n",
     "        df = df[1:]\n",
     "        df.columns = header\n",
-    "    return df"
+    "        \n",
+    "    \n",
+    "    if format_acc == 'y':\n",
+    "        df[acc_header] = df[acc_header] * -9.81\n",
+    "    return df\n",
+    "\n",
+    "#"
    ]
   },
   {
@@ -338,7 +357,7 @@
     "    try: \n",
     "    # Remove all rows where all values are blank then Retrieve the last value    \n",
     "        last_value_of_t = df[t_header].dropna(how='all').iloc[-1]\n",
-    "        t = df[t_header].dropna(how='all')\n",
+    "        t = df[t_header].dropna(how='all').reset_index(drop = True)\n",
     "\n",
     "    # If there's only 1 \"Timestamp\" in the excel sheet, then our x-axis will just equal to it. 'pass' because values assigned to t already is correct\n",
     "        if type(last_value_of_t) == float:\n",
@@ -351,11 +370,13 @@
     "\n",
     "\n",
     "    # t = Col with most number of rows\n",
-    "            t = df[t_header].dropna(how='all').iloc[:, idx]\n",
+    "            t = t.iloc[:, idx]\n",
     "    except:\n",
     "        print(\"Please ensure that there is no column labelled 'Timestamp' that is empty. If so, please remove the header, 'Timestamp'\")\n",
     "        \n",
-    "\n",
+    "# Obtain first value of t to subtract it off later (Just in case it does not start from '0')\n",
+    "    initial_value = t.iloc[0]\n",
+    "        \n",
     "# Note: This only works if t.iloc[-1] is a number and not an error like 'nan'\n",
     "    last_idx = t[t == t.iloc[-1]].index[0]\n",
     "    acc_y = df[\"Average Y\"].dropna(how='all').iloc[:last_idx]\n",
@@ -369,7 +390,7 @@
     "    t = t.iloc[start_idx:last_idx]\n",
     "    \n",
     "#     Ensure that timestamp starts from 0\n",
-    "    t = t.subtract(df[t_header].iloc[0])\n",
+    "    t = t - initial_value\n",
     "#   acc_y_calibrated = df[\"Average Y calibrated\"]\n",
     "\n",
     "    return t, acc_y"
@@ -383,7 +404,7 @@
    "source": [
     "def plot_graph(df, title, method = 's'):\n",
     "    \n",
-    "    df = format_headers(df)\n",
+    "    df = format(df, format_acc)\n",
     "    \n",
     "    t, acc_y = retrieve_x_and_y_axes(df)\n",
     "\n",
