Formatted merged file

--- a/acc-gen-merged.ipynb
+++ b/acc-gen-merged.ipynb
@@ -382,13 +382,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def timeInterval(df):\n",
-    "    '''calculate time interval from the TimeElpased column'''\n",
+    "def retrieve_longest_t_col(df, col):\n",
+    "    '''\n",
+    "    To retrieve the col inputted with the MOST number of rows\n",
+    "    '''\n",
     "    \n",
-    "      # This is to retrieve the \"TimeElapsed column with the MOST number of rows!\"\n",
     "# Remove all rows where all values are blank then Retrieve the last value    \n",
-    "    last_value_of_t = df[\"TimeElapsed\"].dropna(how='all').iloc[-1]\n",
-    "    t = df[\"TimeElapsed\"].dropna(how='all').reset_index(drop=True) # Shift the index back to 0!\n",
+    "    last_value_of_t = df[col].dropna(how='all').iloc[-1]\n",
+    "    t = df[col].dropna(how='all').reset_index(drop=True) # Shift the index back to 0!\n",
     "\n",
     "# If there's only 1 \"Timestamp\" in the excel sheet, then our x-axis will just equal to it. 'pass' because values assigned to t already is correct\n",
     "    if type(last_value_of_t) == float or type(last_value_of_t) == int:\n",
@@ -402,6 +403,20 @@
     "\n",
     "# t = Col with most number of rows\n",
     "        t = t.iloc[:, idx]\n",
+    "    \n",
+    "    return t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def timeInterval(df):\n",
+    "    '''calculate time interval from the TimeElpased column'''\n",
+    "    t = retrieve_longest_t_col(df, col = \"TimeElapsed\")\n",
+    "\n",
     "    #index of TimeInterval: 6\n",
     "    \n",
     "    # Retrieve all rows excluding last & reset the index (Shift it back down to 0)\n",
@@ -656,8 +671,8 @@
    "source": [
     "def totalTime(df):\n",
     "    '''Get the total time taken'''\n",
-    "    \n",
-    "    Total_Time_Taken = df.iloc[len(df)-1,1]\n",
+    "    t = retrieve_longest_t_col(df, col = \"TimeElapsed\")\n",
+    "    Total_Time_Taken = t.iloc[-1]\n",
     "    \n",
     "    return Total_Time_Taken"
    ]
@@ -766,7 +781,7 @@
     "    \n",
     "    result_data = f'''\n",
     "    # Total distance travelled: {Total_Distance_Travelled} m\n",
-    "    # Total time taken: {Total_Time_Taken} s\n",
+    "    # Total time taken (For multiple readings, it is the longest time): {Total_Time_Taken} s\n",
     "    # Max velocity: {Max_Velocity} m/s\n",
     "    # Cut-off time for acceleration: {CutOff_Time} s\n",
     "    # Average acceleration: {Average_Acceleration} m/s^2\n",
@@ -1051,13 +1066,6 @@
    "source": [
     "main()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
