WIP rolling avg based stationary data truncation

--- a/acc-gen-B.ipynb
+++ b/acc-gen-B.ipynb
@@ -330,7 +330,7 @@
     "    # Crude method by finding the mean of entire dataset\n",
     "    \n",
     "    shift_value = df[\"Acc-Y-Adjusted\"].mean()\n",
-    "    #shift_value = df.iloc[0,7]/2\n",
+    "\n",
     "    for i in range(len(df)):\n",
     "        df.iloc[i,7] = df.iloc[i,7] - shift_value\n"
    ]
@@ -442,6 +442,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Function to remove data for when train is stationary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def truncateStationaryValues(df):\n",
+    "    # Currently using a rolling average n of 5. Hence the use of \"3\" as the start index in range.\n",
+    "    # You can change the n to any odd number. If you choose \"3\", then the start index will be 1 and the end index will be 1.\n",
+    "    # Might consider doing this automatically later\n",
+    "    \n",
+    "    from copy import deepcopy\n",
+    "    \n",
+    "    acc_data = deepcopy(df.loc[1:,7].tolist())\n",
+    "    \n",
+    "    j = 3\n",
+    "    rolling_avg_prev = (acc_data[j-2], acc_data[j-1], acc_data[j], acc_data[j+1], acc_data[j+2])/5\n",
+    "    rolling_avg_cur = 0\n",
+    "    truncate_index = 0\n",
+    "    \n",
+    "    for i in range(3, len(df) - 3):\n",
+    "        rolling_avg_cur = (acc_data[i-2], acc_data[i-1], acc_data[i], acc_data[i+1], acc_data[i+2])/5\n",
+    "        delta = rolling_avg_cur - rolling_avg_prev\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Function to integrate all the functions in this section"
    ]
   },
@@ -459,23 +492,10 @@
     "    vt(df)\n",
     "    ds(df)\n",
     "    st(df)\n",
+    "    truncateStationaryValues(df)\n",
     "    \n",
     "    return df"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Function to remove data for when train is stationary"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
