Added a loop to gen-b

--- a/acc-gen-B.ipynb
+++ b/acc-gen-B.ipynb
@@ -810,7 +810,8 @@
     "    print(\"Results will be available at: {}\".format(output_path))\n",
     "    \n",
     "    # Get the title of the file\n",
-    "    title = file_name.split('.')[0]\n",
+    "    title = file_name.split('.')[-2]\n",
+    "    print(title)\n",
     "    if ('/' in title):\n",
     "        additionalSplit = title.split('/')\n",
     "        title = additionalSplit[len(additionalSplit) - 1]\n",
@@ -852,7 +853,10 @@
    },
    "outputs": [],
    "source": [
-    "main()"
+    "uchoice = 1\n",
+    "while (uchoice == 1):\n",
+    "    uchoice = int(input(\"Enter [1] to start and [0] to exit\"))\n",
+    "    main()"
    ]
   },
   {
