Slight logic error
Signed-off-by: elviskasonlin <elvisslin@gmail.com>

--- a/acc-gen-B.ipynb
+++ b/acc-gen-B.ipynb
@@ -854,9 +854,10 @@
    "outputs": [],
    "source": [
     "uchoice = 1\n",
+    "uchoice = int(input(\"Enter [1] to start and [0] to exit\"))\n",
     "while (uchoice == 1):\n",
-    "    uchoice = int(input(\"Enter [1] to start and [0] to exit\"))\n",
-    "    main()"
+    "    main()\n",
+    "    uchoice = int(input(\"Enter [1] to start and [0] to exit\"))"
    ]
   },
   {
