--- a/analysis_of_data.ipynb
+++ b/analysis_of_data.ipynb
@@ -8,16 +8,10 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "import math\n",
-    "import time\n",
-    "start_time = time.time()\n",
-    "\n",
-    "# Used for loading csv files into excel\n",
-    "import openpyxl\n",
-    "from openpyxl.utils.dataframe import dataframe_to_rows\n",
-    "import os\n",
-    "import glob"
+    "import statistics"
    ]
   },
   {
@@ -38,8 +32,7 @@
    "source": [
     "# pd.set_option('display.max_rows', 500)\n",
     "# Remove Anomalous readings\n",
-    "df = df.drop([13, 23, 26, 24, 53])\n",
-    "df = df.drop(range(67,73))"
+    "df = df.drop([2, 4, 11, 13, 16, 23, 24, 25, 26, 35, 41, 53, 68])"
    ]
   },
   {
@@ -48,106 +41,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Drop readings < 700m as deemed as anomalous\n",
-    "above_ground = df[(df[\"Above Ground\"]==\"Yes\") & (df[\"Distance Travelled (m)\"] > 700)]\n",
-    "below_ground = df[(df[\"Above Ground\"]==\"No\") & (df[\"Distance Travelled (m)\"] > 700)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Initialise variables\n",
-    "\n",
-    "# Mean Acceleration\n",
-    "below_ground_y = below_ground[\"Mean Acceleration (ms^-2)\"]\n",
-    "above_ground_y = above_ground[\"Mean Acceleration (ms^-2)\"]\n",
-    "\n",
-    "# Total Distance\n",
-    "below_ground_x = below_ground[\"Distance Travelled (m)\"]\n",
-    "above_ground_x = above_ground[\"Distance Travelled (m)\"]\n",
-    "\n",
-    "# Total Time Taken\n",
-    "below_ground_t = below_ground[\"Total Time Taken (s)\"]\n",
-    "above_ground_t = above_ground[\"Total Time Taken (s)\"]\n",
-    "\n",
-    "# Max Velocity\n",
-    "below_ground_v = below_ground[\"Max Velocity (ms^-1)\"]\n",
-    "above_ground_v = above_ground[\"Max Velocity (ms^-1)\"]\n",
-    "\n",
-    "# Mean Velocity\n",
-    "below_ground_mean_v = below_ground[\"Distance Travelled (m)\"] / below_ground[\"Total Time Taken (s)\"]\n",
-    "above_ground_mean_v = above_ground[\"Distance Travelled (m)\"] / above_ground[\"Total Time Taken (s)\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.scatter(below_ground_t, below_ground_y, c='b', label='Below Ground')\n",
-    "plt.scatter(above_ground_t, above_ground_y, c='r', label='Above Ground')\n",
-    "plt.xlabel('Total Time Taken (s)')\n",
-    "plt.ylabel('Mean Acceleration (ms^-2)')\n",
-    "plt.legend(loc='best')\n",
-    "plt.gcf().set_size_inches((10, 10))  \n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.scatter(below_ground_x, below_ground_v, c='b', label='Below Ground')\n",
-    "plt.scatter(above_ground_x, above_ground_v, c='r', label='Above Ground')\n",
-    "plt.xlabel('Distance Travelled (m)')\n",
-    "plt.ylabel('Max Velocity (ms^-1)')\n",
-    "plt.legend(loc='best')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.scatter(below_ground_x, below_ground_mean_v, c='b', label='Below Ground')\n",
-    "plt.scatter(above_ground_x, above_ground_mean_v, c='r', label='Above Ground')\n",
-    "plt.xlabel('Distance Travelled (m)')\n",
-    "plt.ylabel('Mean Velocity (ms^-1)')\n",
-    "plt.legend(loc='best')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.scatter(below_ground_x, below_ground_t, c='b', label='Below Ground')\n",
-    "plt.scatter(above_ground_x, above_ground_t, c='r', label='Above Ground')\n",
-    "plt.title('Time-Distance Graph')\n",
-    "plt.xlabel('Total Distance Travelled (m)')\n",
-    "plt.ylabel('Total Time Taken (s)')\n",
-    "plt.legend(loc='best')\n",
-    "plt.gcf().set_size_inches((10, 10))    \n",
-    "plt.show()\n",
-    "\n",
-    "plt.scatter(below_ground_t, below_ground_x, c='b', label='Below Ground')\n",
-    "plt.scatter(above_ground_t, above_ground_x, c='r', label='Above Ground')\n",
-    "plt.title('Distance-Time Graph')\n",
-    "plt.xlabel('Total Time Taken (s)')\n",
-    "plt.ylabel('Total Distance Travelled (m)')\n",
-    "plt.legend(loc='best')\n",
-    "plt.gcf().set_size_inches((10, 10))    \n",
-    "plt.show()"
+    "# Drop readings < 500m as deemed as anomalous\n",
+    "above_ground = df[(df[\"Above Ground\"]==\"Yes\") & (df[\"Distance Travelled (m)\"] > 500)]\n",
+    "below_ground = df[(df[\"Above Ground\"]==\"No\") & (df[\"Distance Travelled (m)\"] > 500)]"
    ]
   },
   {
@@ -159,6 +55,17 @@
     "# To remove samples which still appear slightly anomalous and to analyse the subset of data where dist travelled is > 700m and less than 3000m\n",
     "below_ground_2 = below_ground[below_ground[\"Distance Travelled (m)\"] < 3000]\n",
     "above_ground_2 = above_ground[above_ground[\"Distance Travelled (m)\"] < 3000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To manually filter out anomalous readings\n",
+    "\n",
+    "# below_ground_2.sort_values(by='Total Time Taken (s)', ascending=True)"
    ]
   },
   {
@@ -194,16 +101,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.scatter(bg2_t, bg2_x, c='b', label='Below Ground')\n",
-    "plt.scatter(ag2_t, ag2_x, c='r', label='Above Ground')\n",
-    "plt.title(\"Distance-Time Graph\")\n",
+    "# Obtain centroids\n",
+    "bg_centroid = (sum(bg2_t) / len(bg2_t), sum(bg2_mv) / len(bg2_mv))\n",
+    "ag_centroid = (sum(ag2_t) / len(ag2_t), sum(ag2_mv) / len(ag2_mv))\n",
+    "\n",
+    "plt.scatter(bg2_t, bg2_mv, c='b', label='Below Ground')\n",
+    "plt.scatter(ag2_t, ag2_mv, c='r', label='Above Ground')\n",
+    "plt.scatter(bg_centroid[0], bg_centroid[1], c='b', marker='x', s = 100, label='Centroid')\n",
+    "plt.scatter(ag_centroid[0], ag_centroid[1], c='r', marker='x', s = 100, label='Centroid')\n",
+    "plt.title(\"Velocity-Time Graph\")\n",
     "plt.xlabel('Total Time Taken (s)')\n",
-    "plt.ylabel('Total Distance Travelled (m)')\n",
+    "plt.ylabel('Mean Velocity (ms^-1)')\n",
     "plt.legend(loc='best')\n",
     "plt.gcf().set_size_inches((10, 10))    \n",
     "plt.show()\n",
     "\n",
-    "print(\"Above ground takes a longer time than Below ground\")"
+    "diff = bg_centroid[1] - ag_centroid[1]\n",
+    "\n",
+    "print(f\"Mean Velocity (Below) - Mean Velocity (Above): {diff}\")\n",
+    "\n",
+    "sns.regplot(bg2_t, bg2_mv, color = 'b')\n",
+    "sns.regplot(ag2_t, ag2_mv, color = 'r')\n",
+    "plt.xlabel(\"Total Time Taken (s)\")\n",
+    "plt.ylabel(\"Mean Velocity (ms^-1)\")\n",
+    "plt.title(\"Velocity-Time Graph\")\n",
+    "plt.gcf().set_size_inches((10, 10)) \n",
+    "print(\"Trend is very similar\")"
    ]
   },
   {
@@ -212,17 +135,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "bg_centroid_2 = (sum(bg2_x) / len(bg2_x), sum(bg2_y) / len(bg2_y))\n",
+    "ag_centroid_2 = (sum(ag2_x) / len(ag2_x), sum(ag2_y) / len(ag2_y))\n",
+    "\n",
     "# Acceleration-Distance Graph\n",
     "plt.scatter(bg2_x, bg2_y, c='b', label='Below Ground')\n",
     "plt.scatter(ag2_x, ag2_y, c='r', label='Above Ground')\n",
+    "plt.scatter(bg_centroid_2[0], bg_centroid_2[1], c='b', marker='x', s = 100, label='Centroid')\n",
+    "plt.scatter(ag_centroid_2[0], ag_centroid_2[1], c='r', marker='x', s = 100, label='Centroid')\n",
     "plt.title('Acceleration-Distance Graph')\n",
     "plt.xlabel('Total Distance Travelled (m)')\n",
     "plt.ylabel('Mean Acceleration (ms^-2)')\n",
     "plt.legend(loc='best')\n",
     "plt.gcf().set_size_inches((10, 10))  \n",
     "plt.show()\n",
+    "diff = bg_centroid_2[1] - ag_centroid_2[1]\n",
     "\n",
-    "print(\"No discernible difference\")"
+    "print(f\"Mean Acceleration (Below) - Mean Acceleration (Above): {diff} [p-value = 21.0%]\")"
    ]
   },
   {
@@ -235,9 +164,9 @@
     "mean_t_below = bg2_t.mean()\n",
     "mean_t_above = ag2_t.mean()\n",
     "\n",
-    "# Median Time Taken\n",
-    "median_t_below = bg2_t.median()\n",
-    "median_t_above = ag2_t.median()\n",
+    "# Mean Distance Travelled\n",
+    "mean_d_below = bg2_x.mean()\n",
+    "mean_d_above = ag2_x.mean()\n",
     "\n",
     "# Mean Velocity\n",
     "mean_v_below = sum(bg2_x) / sum(bg2_t)\n",
@@ -249,15 +178,16 @@
     "\n",
     "print(\n",
     "f'''\n",
-    "Taking samples where distance travelled is between 700m and 3000m:\n",
+    "Taking samples where distance travelled is between 500m and 3000m:\n",
     "\n",
     "Number of samples below ground = {len(below_ground_2)}\n",
     "Number of samples above ground = {len(above_ground_2)}\n",
     "\n",
     "Mean t (Below) = {mean_t_below}\n",
-    "Median t (Below) = {median_t_below}\n",
     "Mean t (Above) = {mean_t_above}\n",
-    "Median t (Above) = {median_t_above}\n",
+    "\n",
+    "Mean d (Below) = {mean_d_below}\n",
+    "Mean d (Above) = {mean_d_above}\n",
     "\n",
     "Mean v (Below) = {mean_v_below}\n",
     "Mean v (Above) = {mean_v_above}\n",
@@ -265,9 +195,7 @@
     "Mean a (Below) = {mean_a_below}\n",
     "Mean a (Above) = {mean_a_above}\n",
     "\n",
-    "Mean t (Above) - Mean t (Below) = {mean_t_above - mean_t_below} ['+' = Above SLOWER than BELOW]\n",
-    "Median t (Above) - Median t (Below) = {median_t_above - median_t_below} ['+' = Above SLOWER than BELOW]\n",
-    "Mean v (Above) - Mean v (Below) = {mean_v_above - mean_v_below} ['-' = Above SLOWER than BELOW]\n",
+    "Mean v (Above) - Mean v (Below) = {mean_v_above - mean_v_below} [Negligible difference]\n",
     "Mean a (Above) - Mean a (Below) = {mean_a_above - mean_a_below} [Negligible difference]\n",
     "\n",
     "Conclusion:\n",
@@ -275,6 +203,159 @@
     "However, based on our results, this is not significantly affected by the time trains take to accelerate.\n",
     "However, it may be significantly affected by the time trains take to decelerate as trains travelling above ground often take a while to stop.\n",
     "''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialise variables (In same code block to prevent bugs)\n",
+    "# Unbiased estimate of population mean\n",
+    "ag_mean_v = sum(ag2_x) / sum(ag2_t)\n",
+    "ag_mean_a = statistics.mean(ag2_y)\n",
+    "bg_mean_v = sum(bg2_x) / sum(bg2_t)\n",
+    "bg_mean_a = statistics.mean(bg2_y)\n",
+    "\n",
+    "# Sample Variance (AG: Mean v + Mean a)\n",
+    "ag_sample_var_v = statistics.variance(ag2_v)\n",
+    "ag_sample_var_a = statistics.variance(ag2_y)\n",
+    "\n",
+    "# Unbiased estimate of population variance\n",
+    "ag_pop_var_v = ag_sample_var_v * (len(above_ground_2) / (len(above_ground_2) - 1))\n",
+    "ag_pop_var_a = ag_sample_var_a * (len(above_ground_2) / (len(above_ground_2) - 1))\n",
+    "\n",
+    "# Sigma\n",
+    "ag_sigma_v = ag_pop_var_v ** (1/2)\n",
+    "ag_sigma_a = ag_pop_var_a ** (1/2)\n",
+    "\n",
+    "\n",
+    "# Mean Acceleration\n",
+    "\n",
+    "print(f\"Above ground sample size: {len(above_ground_2)}, Below ground sample size: {len(below_ground_2)}\")\n",
+    "\n",
+    "print(f''' \n",
+    "Traditionally, trains are human-operated. Hence our population variance and mean will be based off human-operated trains.\n",
+    "Null Hypothesis: \n",
+    "Under the assumption that H_0 is true, taking automated trains has no effect on a train's mean acceleration.\n",
+    "\n",
+    "As our sample size n = 20 more than / equal to 20, by Central Limit Theorem, we can assume that the distribution of sample means is approximately Normal.\n",
+    "Thus, for human-operated trains,\n",
+    "Unbiased estimate of pop mean = {ag_mean_a}\n",
+    "Unbiased estimate of pop variance = {ag_pop_var_a}\n",
+    "\n",
+    "Distribution of sample mean X_bar = N({ag_mean_a}, {ag_pop_var_a/24})\n",
+    "\n",
+    "Sigma = {(ag_pop_var_a) ** 1/2}\n",
+    "\n",
+    "Mean acceleration below ground = {bg_mean_a}\n",
+    "\n",
+    "Using the G.C.,\n",
+    "Our p-value, P(X_bar > mean acceleration below ground) = 0.2098682982\n",
+    "\n",
+    "Setting a 5% level of significance (0.05), \n",
+    "H_0 cannot be rejected.\n",
+    "Hence our hypothesis is invalid.\n",
+    "\n",
+    "\n",
+    "''')\n",
+    "\n",
+    "# Mean Velocity\n",
+    "\n",
+    "print(f''' \n",
+    "Traditionally, trains are human-operated. Hence our population variance and mean will be based off human-operated trains.\n",
+    "Null Hypothesis: \n",
+    "Under the assumption that H_0 is true, automated and human-operated trains have the same mean velocity.\n",
+    "\n",
+    "As our sample size n = 20 more than / equal to 20, by Central Limit Theorem, we can assume that the distribution of sample means is approximately Normal.\n",
+    "Thus, for human-operated trains,\n",
+    "Unbiased estimate of pop mean = {ag_mean_v}\n",
+    "Unbiased estimate of pop variance = {ag_pop_var_v}\n",
+    "\n",
+    "Distribution of sample mean X_bar = N({ag_mean_v}, {ag_pop_var_v/24})\n",
+    "\n",
+    "Sigma = {(ag_pop_var_v/24) ** 1/2}\n",
+    "\n",
+    "Mean velocity below ground = {bg_mean_v}\n",
+    "\n",
+    "Using the G.C.,\n",
+    "Our p-value, P(X_bar > mean velocity below ground) = 0.439472543\n",
+    "\n",
+    "Since ,\n",
+    "H_0 cannot be rejected. Our hypothesis is invalid.\n",
+    "\n",
+    "\n",
+    "''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def pvalue_101(mu, sigma, samp_size, samp_mean=0, deltam=0):\n",
+    "#     np.random.seed(1234)\n",
+    "#     s1 = np.random.normal(mu, sigma, samp_size)\n",
+    "#     if samp_mean > 0:\n",
+    "#         print(len(s1[s1>samp_mean]))\n",
+    "#         outliers = float(len(s1[s1>samp_mean])*100)/float(len(s1))\n",
+    "#         print('Percentage of numbers larger than {} is {}%'.format(samp_mean, outliers))\n",
+    "#         print(f'Percentage of numbers smaller than {samp_mean} is {100-outliers}%')\n",
+    "#     if deltam == 0:\n",
+    "#         deltam = abs(mu-samp_mean)\n",
+    "#     if deltam > 0 :\n",
+    "#         outliers = (float(len(s1[s1>(mu+deltam)]))\n",
+    "#                     +float(len(s1[s1<(mu-deltam)])))*100.0/float(len(s1))\n",
+    "#         print('Percentage of numbers further than the population mean of {} by +/-{} is {}%'.format(mu, deltam, outliers))\n",
+    "\n",
+    "#     fig, ax = plt.subplots(figsize=(8,8))\n",
+    "#     fig.suptitle('Normal Distribution: population_mean={}'.format(mu) )\n",
+    "#     plt.hist(s1)\n",
+    "#     plt.axvline(x=mu+deltam, color='red')\n",
+    "#     plt.axvline(x=mu-deltam, color='green')\n",
+    "#     plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ARCHIVED\n",
+    "# plt.scatter(below_ground_x, below_ground_v, c='b', label='Below Ground')\n",
+    "# plt.scatter(above_ground_x, above_ground_v, c='r', label='Above Ground')\n",
+    "# plt.xlabel('Distance Travelled (m)')\n",
+    "# plt.ylabel('Max Velocity (ms^-1)')\n",
+    "# plt.legend(loc='best')\n",
+    "# plt.show()\n",
+    "\n",
+    "# plt.scatter(below_ground_x, below_ground_mean_v, c='b', label='Below Ground')\n",
+    "# plt.scatter(above_ground_x, above_ground_mean_v, c='r', label='Above Ground')\n",
+    "# plt.xlabel('Distance Travelled (m)')\n",
+    "# plt.ylabel('Mean Velocity (ms^-1)')\n",
+    "# plt.legend(loc='best')\n",
+    "# plt.show()\n",
+    "\n",
+    "# plt.scatter(below_ground_x, below_ground_t, c='b', label='Below Ground')\n",
+    "# plt.scatter(above_ground_x, above_ground_t, c='r', label='Above Ground')\n",
+    "# plt.title('Time-Distance Graph')\n",
+    "# plt.xlabel('Total Distance Travelled (m)')\n",
+    "# plt.ylabel('Total Time Taken (s)')\n",
+    "# plt.legend(loc='best')\n",
+    "# plt.gcf().set_size_inches((10, 10))    \n",
+    "# plt.show()\n",
+    "\n",
+    "# plt.scatter(below_ground_t, below_ground_x, c='b', label='Below Ground')\n",
+    "# plt.scatter(above_ground_t, above_ground_x, c='r', label='Above Ground')\n",
+    "# plt.title('Distance-Time Graph')\n",
+    "# plt.xlabel('Total Time Taken (s)')\n",
+    "# plt.ylabel('Total Distance Travelled (m)')\n",
+    "# plt.legend(loc='best')\n",
+    "# plt.gcf().set_size_inches((10, 10))    \n",
+    "# plt.show()"
    ]
   }
  ],
