Formatted rolling average

--- a/acc_sets.ipynb
+++ b/acc_sets.ipynb
@@ -236,33 +236,19 @@
    "outputs": [],
    "source": [
     "def truncateStationaryValues(df, Threshold, isInG):\n",
-    "    # Currently using a rolling average n of 5. Hence the use of \"3\" as the start index in range.\n",
-    "    # You can change the n to any odd number. If you choose \"3\", then the start index will be 1 and the end index will be 1.\n",
-    "    # Future enhancements: Automate this functionality\n",
+    "    # Currently using a rolling average n of 5.\n",
     "    \n",
     "    threshold = Threshold # Threshold is assigned here. Typically 0.02 if values are in m/s^2\n",
-    "    \n",
-    "    from copy import deepcopy\n",
-    "    \n",
-    "    acc_data = deepcopy(df.loc[:, \"Average Y\"].tolist())\n",
-    "        \n",
-    "    if (isInG):\n",
-    "        for i, e in enumerate(acc_data):\n",
-    "            acc_data[i] = -e*9.81\n",
-    "    else:\n",
-    "        for i, e in enumerate(acc_data):\n",
-    "            acc_data[i] = -e\n",
-    "    \n",
-    "    j = 3\n",
-    "    rolling_avg_prev = (acc_data[j-2] + acc_data[j-1] + acc_data[j] + acc_data[j+1] + acc_data[j+2])/5\n",
-    "    rolling_avg_cur = 0\n",
     "    truncate_index = 0\n",
+    "    rolling_ave = df[\"Average Y\"].rolling(window=5).mean().dropna()\n",
+    "    if isInG:\n",
+    "        rolling_ave *= -9.81\n",
     "    \n",
-    "    for i in range(3, len(df) - 3):\n",
-    "        rolling_avg_cur = (acc_data[i-2] + acc_data[i-1] + acc_data[i] + acc_data[i+1] + acc_data[i+2])/5\n",
-    "        delta = rolling_avg_cur - rolling_avg_prev\n",
-    "        if (delta > threshold):\n",
-    "            # print(i, delta, acc_data[i]) # For debugging\n",
+    "    for i in range(0, len(rolling_ave)):\n",
+    "        if (i+1) == len(rolling_ave):\n",
+    "            return \"Could not find a difference that is more than threshold. Try setting a smaller threshold value.\"\n",
+    "        delta = abs(rolling_ave.iloc[i+1]) - abs(rolling_ave.iloc[i])\n",
+    "        if delta > threshold:\n",
     "            truncate_index = i\n",
     "            break\n",
     "    \n",
@@ -368,14 +354,10 @@
    "source": [
     "def accAdjust(df, smoothen_curve, format_acc):\n",
     "    '''Generate the Acc-Y-Adjusted and take the shift value into account'''\n",
-    "    \n",
-    "    #index of Acc-Y-Adjusted: 7\n",
     "\n",
     "    if format_acc == 'y':\n",
     "        df[\"Average Y\"] = df[\"Average Y\"] * -9.81\n",
     "    acc_Y = df[\"Average Y\"]\n",
-    "#     for i in range(len(df)):\n",
-    "#         acc_Y.append(df.iloc[i,4]*9.8)\n",
     "        \n",
     "    # Filter to remove noise\n",
     "    n = int(smoothen_curve)  # the larger n is, the smoother the curve will be\n",
@@ -387,10 +369,7 @@
     "    \n",
     "    #shift value\n",
     "    shift_value = df[\"Acc-Y-Adjusted\"].mean()\n",
-    "    df[\"Acc-Y-Adjusted\"] = df[\"Acc-Y-Adjusted\"] - shift_value\n",
-    "#     for i in range(len(df)):\n",
-    "#         df.iloc[i,7] = df.iloc[i,7] - shift_value\n",
-    "    \n"
+    "    df[\"Acc-Y-Adjusted\"] = df[\"Acc-Y-Adjusted\"] - shift_value"
    ]
   },
   {
