--- a/acc-analysis.ipynb
+++ b/acc-analysis.ipynb
@@ -43,7 +43,31 @@
    "source": [
     "# Drop readings < 500m as deemed as anomalous\n",
     "above_ground = df[(df[\"Above Ground\"]==\"Yes\") & (df[\"Distance Travelled (m)\"] > 500)]\n",
-    "below_ground = df[(df[\"Above Ground\"]==\"No\") & (df[\"Distance Travelled (m)\"] > 500)]"
+    "below_ground = df[(df[\"Above Ground\"]==\"No\") & (df[\"Distance Travelled (m)\"] > 500)]\n",
+    "\n",
+    "# 67, 69, 70, 71, 72"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Just to init manual and automated variables\n",
+    "manual = above_ground\n",
+    "automated = below_ground"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To shift NEL line to 'above ground' as despite travelling below_ground it is manual; UPDATE 190920: Apparently, it is AUTOMATED\n",
+    "# manual = above_ground.append(below_ground.iloc[15:19])\n",
+    "# automated = below_ground.drop([67,69,70,71,72])"
    ]
   },
   {
@@ -53,8 +77,8 @@
    "outputs": [],
    "source": [
     "# To remove samples which still appear slightly anomalous and to analyse the subset of data where dist travelled is > 700m and less than 3000m\n",
-    "below_ground_2 = below_ground[below_ground[\"Distance Travelled (m)\"] < 3000]\n",
-    "above_ground_2 = above_ground[above_ground[\"Distance Travelled (m)\"] < 3000]"
+    "automated_2 = automated[automated[\"Distance Travelled (m)\"] < 3000]\n",
+    "manual_2 = manual[manual[\"Distance Travelled (m)\"] < 3000]"
    ]
   },
   {
@@ -65,7 +89,7 @@
    "source": [
     "# To manually filter out anomalous readings\n",
     "\n",
-    "# below_ground_2.sort_values(by='Total Time Taken (s)', ascending=True)"
+    "# automated_2.sort_values(by='Total Time Taken (s)', ascending=True)"
    ]
   },
   {
@@ -75,24 +99,24 @@
    "outputs": [],
    "source": [
     "# Mean Acceleration\n",
-    "bg2_y = below_ground_2[\"Mean Acceleration (ms^-2)\"]\n",
-    "ag2_y = above_ground_2[\"Mean Acceleration (ms^-2)\"]\n",
+    "auto_y = automated_2[\"Mean Acceleration (ms^-2)\"]\n",
+    "manual_y = manual_2[\"Mean Acceleration (ms^-2)\"]\n",
     "\n",
     "# Total Distance\n",
-    "bg2_x = below_ground_2[\"Distance Travelled (m)\"]\n",
-    "ag2_x = above_ground_2[\"Distance Travelled (m)\"]\n",
+    "auto_x = automated_2[\"Distance Travelled (m)\"]\n",
+    "manual_x = manual_2[\"Distance Travelled (m)\"]\n",
     "\n",
     "# Total Time Taken\n",
-    "bg2_t = below_ground_2[\"Total Time Taken (s)\"]\n",
-    "ag2_t = above_ground_2[\"Total Time Taken (s)\"]\n",
+    "auto_t = automated_2[\"Total Time Taken (s)\"]\n",
+    "manual_t = manual_2[\"Total Time Taken (s)\"]\n",
     "\n",
     "# Max Velocity\n",
-    "bg2_v = below_ground_2[\"Max Velocity (ms^-1)\"]\n",
-    "ag2_v = above_ground_2[\"Max Velocity (ms^-1)\"]\n",
+    "auto_v = automated_2[\"Max Velocity (ms^-1)\"]\n",
+    "manual_v = manual_2[\"Max Velocity (ms^-1)\"]\n",
     "\n",
     "# Mean Velocity\n",
-    "bg2_mv = below_ground_2[\"Distance Travelled (m)\"] / below_ground_2[\"Total Time Taken (s)\"]\n",
-    "ag2_mv = above_ground_2[\"Distance Travelled (m)\"] / above_ground_2[\"Total Time Taken (s)\"]"
+    "auto_mv = automated_2[\"Distance Travelled (m)\"] / automated_2[\"Total Time Taken (s)\"]\n",
+    "manual_mv = manual_2[\"Distance Travelled (m)\"] / manual_2[\"Total Time Taken (s)\"]"
    ]
   },
   {
@@ -102,29 +126,29 @@
    "outputs": [],
    "source": [
     "# Obtain centroids\n",
-    "bg_centroid = (sum(bg2_t) / len(bg2_t), sum(bg2_mv) / len(bg2_mv))\n",
-    "ag_centroid = (sum(ag2_t) / len(ag2_t), sum(ag2_mv) / len(ag2_mv))\n",
+    "auto_centroid = (sum(auto_t) / len(auto_t), sum(auto_y) / len(auto_y))\n",
+    "manual_centroid = (sum(manual_t) / len(manual_t), sum(manual_y) / len(manual_y))\n",
     "\n",
-    "plt.scatter(bg2_t, bg2_mv, c='b', label='Below Ground')\n",
-    "plt.scatter(ag2_t, ag2_mv, c='r', label='Above Ground')\n",
-    "plt.scatter(bg_centroid[0], bg_centroid[1], c='b', marker='x', s = 100, label='Centroid')\n",
-    "plt.scatter(ag_centroid[0], ag_centroid[1], c='r', marker='x', s = 100, label='Centroid')\n",
-    "plt.title(\"Velocity-Time Graph\")\n",
+    "plt.scatter(auto_t, auto_y, c='b', label='Automated')\n",
+    "plt.scatter(manual_t, manual_y, c='r', label='Human Operated')\n",
+    "plt.scatter(auto_centroid[0], auto_centroid[1], c='b', marker='x', s = 100, label='Automated Centroid')\n",
+    "plt.scatter(manual_centroid[0], manual_centroid[1], c='r', marker='x', s = 100, label='Human Operated Centroid')\n",
+    "plt.title(\"Acceleration-Time Graph\")\n",
     "plt.xlabel('Total Time Taken (s)')\n",
-    "plt.ylabel('Mean Velocity (ms^-1)')\n",
+    "plt.ylabel('Mean Acceleration (ms^-2)')\n",
     "plt.legend(loc='best')\n",
     "plt.gcf().set_size_inches((10, 10))    \n",
     "plt.show()\n",
     "\n",
-    "diff = bg_centroid[1] - ag_centroid[1]\n",
+    "diff = auto_centroid[1] - manual_centroid[1]\n",
     "\n",
-    "print(f\"Mean Velocity (Below) - Mean Velocity (Above): {diff}\")\n",
+    "print(f\"Automated Centroid - Manual Centroid: {diff}ms^-2\")\n",
     "\n",
-    "sns.regplot(bg2_t, bg2_mv, color = 'b')\n",
-    "sns.regplot(ag2_t, ag2_mv, color = 'r')\n",
+    "sns.regplot(auto_t, auto_mv, color = 'b')\n",
+    "sns.regplot(manual_t, manual_mv, color = 'r')\n",
     "plt.xlabel(\"Total Time Taken (s)\")\n",
-    "plt.ylabel(\"Mean Velocity (ms^-1)\")\n",
-    "plt.title(\"Velocity-Time Graph\")\n",
+    "plt.ylabel(\"Mean Acceleration (ms^-2)\")\n",
+    "plt.title(\"Acceleration-Time Graph\")\n",
     "plt.gcf().set_size_inches((10, 10)) \n",
     "print(\"Trend is very similar\")"
    ]
@@ -135,21 +159,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bg_centroid_2 = (sum(bg2_x) / len(bg2_x), sum(bg2_y) / len(bg2_y))\n",
-    "ag_centroid_2 = (sum(ag2_x) / len(ag2_x), sum(ag2_y) / len(ag2_y))\n",
+    "auto_centroid_2 = (sum(auto_x) / len(auto_x), sum(auto_y) / len(auto_y))\n",
+    "manual_centroid_2 = (sum(manual_x) / len(manual_x), sum(manual_y) / len(manual_y))\n",
     "\n",
     "# Acceleration-Distance Graph\n",
-    "plt.scatter(bg2_x, bg2_y, c='b', label='Below Ground')\n",
-    "plt.scatter(ag2_x, ag2_y, c='r', label='Above Ground')\n",
-    "plt.scatter(bg_centroid_2[0], bg_centroid_2[1], c='b', marker='x', s = 100, label='Centroid')\n",
-    "plt.scatter(ag_centroid_2[0], ag_centroid_2[1], c='r', marker='x', s = 100, label='Centroid')\n",
+    "plt.scatter(auto_x, auto_y, c='b', label='Below Ground')\n",
+    "plt.scatter(manual_x, manual_y, c='r', label='Above Ground')\n",
+    "plt.scatter(auto_centroid_2[0], auto_centroid_2[1], c='b', marker='x', s = 100, label='Centroid')\n",
+    "plt.scatter(manual_centroid_2[0], manual_centroid_2[1], c='r', marker='x', s = 100, label='Centroid')\n",
     "plt.title('Acceleration-Distance Graph')\n",
     "plt.xlabel('Total Distance Travelled (m)')\n",
     "plt.ylabel('Mean Acceleration (ms^-2)')\n",
     "plt.legend(loc='best')\n",
     "plt.gcf().set_size_inches((10, 10))  \n",
     "plt.show()\n",
-    "diff = bg_centroid_2[1] - ag_centroid_2[1]\n",
+    "diff = auto_centroid_2[1] - manual_centroid_2[1]\n",
     "\n",
     "print(f\"Mean Acceleration (Below) - Mean Acceleration (Above): {diff} [p-value = 21.0%]\")"
    ]
@@ -161,27 +185,27 @@
    "outputs": [],
    "source": [
     "# Mean Time Taken\n",
-    "mean_t_below = bg2_t.mean()\n",
-    "mean_t_above = ag2_t.mean()\n",
+    "mean_t_below = auto_t.mean()\n",
+    "mean_t_above = manual_t.mean()\n",
     "\n",
     "# Mean Distance Travelled\n",
-    "mean_d_below = bg2_x.mean()\n",
-    "mean_d_above = ag2_x.mean()\n",
+    "mean_d_below = auto_x.mean()\n",
+    "mean_d_above = manual_x.mean()\n",
     "\n",
     "# Mean Velocity\n",
-    "mean_v_below = sum(bg2_x) / sum(bg2_t)\n",
-    "mean_v_above = sum(ag2_x) / sum(ag2_t)\n",
+    "mean_v_below = sum(auto_x) / sum(auto_t)\n",
+    "mean_v_above = sum(manual_x) / sum(manual_t)\n",
     "\n",
     "# Mean Acceleration\n",
-    "mean_a_below = bg2_y.mean()\n",
-    "mean_a_above = ag2_y.mean()\n",
+    "mean_a_below = auto_y.mean()\n",
+    "mean_a_above = manual_y.mean()\n",
     "\n",
     "print(\n",
     "f'''\n",
     "Taking samples where distance travelled is between 500m and 3000m:\n",
     "\n",
-    "Number of samples below ground = {len(below_ground_2)}\n",
-    "Number of samples above ground = {len(above_ground_2)}\n",
+    "Number of samples below ground = {len(automated_2)}\n",
+    "Number of samples above ground = {len(manual_2)}\n",
     "\n",
     "Mean t (Below) = {mean_t_below}\n",
     "Mean t (Above) = {mean_t_above}\n",
@@ -211,48 +235,60 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print((manual_pop_var_a/len(manual_2)) ** (1/2))\n",
+    "print(manual_sigma_a)\n",
+    "print((manual_pop_var_a/29) ** (1/2))\n",
+    "print((manual_pop_var_a/len(manual_2)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Initialise variables (In same code block to prevent bugs)\n",
     "# Unbiased estimate of population mean\n",
-    "ag_mean_v = sum(ag2_x) / sum(ag2_t)\n",
-    "ag_mean_a = statistics.mean(ag2_y)\n",
-    "bg_mean_v = sum(bg2_x) / sum(bg2_t)\n",
-    "bg_mean_a = statistics.mean(bg2_y)\n",
+    "manual_mean_v = sum(manual_x) / sum(manual_t)\n",
+    "manual_mean_a = statistics.mean(manual_y)\n",
+    "auto_mean_v = sum(auto_x) / sum(auto_t)\n",
+    "auto_mean_a = statistics.mean(auto_y)\n",
     "\n",
-    "# Sample Variance (AG: Mean v + Mean a)\n",
-    "ag_sample_var_v = statistics.variance(ag2_v)\n",
-    "ag_sample_var_a = statistics.variance(ag2_y)\n",
+    "# Sample Variance (manual: Mean v + Mean a)\n",
+    "manual_sample_var_v = statistics.variance(manual_v)\n",
+    "manual_sample_var_a = statistics.variance(manual_y)\n",
     "\n",
     "# Unbiased estimate of population variance\n",
-    "ag_pop_var_v = ag_sample_var_v * (len(above_ground_2) / (len(above_ground_2) - 1))\n",
-    "ag_pop_var_a = ag_sample_var_a * (len(above_ground_2) / (len(above_ground_2) - 1))\n",
+    "manual_pop_var_v = manual_sample_var_v * (len(manual_2) / (len(manual_2) - 1))\n",
+    "manual_pop_var_a = manual_sample_var_a * (len(manual_2) / (len(manual_2) - 1))\n",
     "\n",
     "# Sigma\n",
-    "ag_sigma_v = ag_pop_var_v ** (1/2)\n",
-    "ag_sigma_a = ag_pop_var_a ** (1/2)\n",
+    "manual_sigma_v = manual_pop_var_v ** (1/2)\n",
+    "manual_sigma_a = manual_pop_var_a ** (1/2)\n",
     "\n",
     "\n",
     "# Mean Acceleration\n",
     "\n",
-    "print(f\"Above ground sample size: {len(above_ground_2)}, Below ground sample size: {len(below_ground_2)}\")\n",
+    "print(f\"Above ground sample size: {len(manual_2)}, Below ground sample size: {len(automated_2)}\")\n",
     "\n",
     "print(f''' \n",
     "Traditionally, trains are human-operated. Hence our population variance and mean will be based off human-operated trains.\n",
     "Null Hypothesis: \n",
     "Under the assumption that H_0 is true, taking automated trains has no effect on a train's mean acceleration.\n",
     "\n",
-    "As our sample size n = 20 more than / equal to 20, by Central Limit Theorem, we can assume that the distribution of sample means is approximately Normal.\n",
+    "As our sample size n = {len(manual_2)} more than / equal to 20, by Central Limit Theorem, we can assume that the distribution of sample means is approximately Normal.\n",
     "Thus, for human-operated trains,\n",
-    "Unbiased estimate of pop mean = {ag_mean_a}\n",
-    "Unbiased estimate of pop variance = {ag_pop_var_a}\n",
+    "Unbiased estimate of pop mean = {manual_mean_a}\n",
+    "Unbiased estimate of pop variance = {manual_pop_var_a}\n",
     "\n",
-    "Distribution of sample mean X_bar = N({ag_mean_a}, {ag_pop_var_a/24})\n",
+    "Distribution of sample mean X_bar = N({manual_mean_a}, {manual_pop_var_a/len(manual_2)})\n",
     "\n",
-    "Sigma = {(ag_pop_var_a) ** 1/2}\n",
+    "Sigma = {(manual_pop_var_a/len(manual_2)) ** (1/2)}\n",
     "\n",
-    "Mean acceleration below ground = {bg_mean_a}\n",
+    "Mean acceleration for automated trains = {auto_mean_a}\n",
     "\n",
     "Using the G.C.,\n",
-    "Our p-value, P(X_bar > mean acceleration below ground) = 0.2098682982\n",
+    "Our p-value, P(X_bar > mean acceleration for automated trains) = 0.3258347235\n",
     "\n",
     "Setting a 5% level of significance (0.05), \n",
     "H_0 cannot be rejected.\n",
@@ -268,19 +304,19 @@
     "Null Hypothesis: \n",
     "Under the assumption that H_0 is true, automated and human-operated trains have the same mean velocity.\n",
     "\n",
-    "As our sample size n = 20 more than / equal to 20, by Central Limit Theorem, we can assume that the distribution of sample means is approximately Normal.\n",
+    "As our sample size n = {len(manual_2)} more than / equal to 20, by Central Limit Theorem, we can assume that the distribution of sample means is approximately Normal.\n",
     "Thus, for human-operated trains,\n",
-    "Unbiased estimate of pop mean = {ag_mean_v}\n",
-    "Unbiased estimate of pop variance = {ag_pop_var_v}\n",
+    "Unbiased estimate of pop mean = {manual_mean_v}\n",
+    "Unbiased estimate of pop variance = {manual_pop_var_v}\n",
     "\n",
-    "Distribution of sample mean X_bar = N({ag_mean_v}, {ag_pop_var_v/24})\n",
+    "Distribution of sample mean X_bar = N({manual_mean_v}, {manual_pop_var_v/len(manual_2)})\n",
     "\n",
-    "Sigma = {(ag_pop_var_v/24) ** 1/2}\n",
+    "Sigma = {(manual_pop_var_v/len(manual_2)) ** (1/2)}\n",
     "\n",
-    "Mean velocity below ground = {bg_mean_v}\n",
+    "Mean velocity for automated trains = {auto_mean_v}\n",
     "\n",
     "Using the G.C.,\n",
-    "Our p-value, P(X_bar > mean velocity below ground) = 0.439472543\n",
+    "Our p-value, P(X_bar > mean velocity for automated trains) = 0.439472543 [Need to recalculate]\n",
     "\n",
     "Since ,\n",
     "H_0 cannot be rejected. Our hypothesis is invalid.\n",
@@ -301,14 +337,14 @@
     "#     if samp_mean > 0:\n",
     "#         print(len(s1[s1>samp_mean]))\n",
     "#         outliers = float(len(s1[s1>samp_mean])*100)/float(len(s1))\n",
-    "#         print('Percentage of numbers larger than {} is {}%'.format(samp_mean, outliers))\n",
-    "#         print(f'Percentage of numbers smaller than {samp_mean} is {100-outliers}%')\n",
+    "#         print('Percentmanuale of numbers larger than {} is {}%'.format(samp_mean, outliers))\n",
+    "#         print(f'Percentmanuale of numbers smaller than {samp_mean} is {100-outliers}%')\n",
     "#     if deltam == 0:\n",
     "#         deltam = abs(mu-samp_mean)\n",
     "#     if deltam > 0 :\n",
     "#         outliers = (float(len(s1[s1>(mu+deltam)]))\n",
     "#                     +float(len(s1[s1<(mu-deltam)])))*100.0/float(len(s1))\n",
-    "#         print('Percentage of numbers further than the population mean of {} by +/-{} is {}%'.format(mu, deltam, outliers))\n",
+    "#         print('Percentmanuale of numbers further than the population mean of {} by +/-{} is {}%'.format(mu, deltam, outliers))\n",
     "\n",
     "#     fig, ax = plt.subplots(figsize=(8,8))\n",
     "#     fig.suptitle('Normal Distribution: population_mean={}'.format(mu) )\n",
@@ -375,7 +411,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
