--- a/acc_individual.ipynb
+++ b/acc_individual.ipynb
@@ -40,7 +40,7 @@
     "import os.path\n",
     "from scipy.signal import lfilter\n",
     "\n",
-    "from aux import *"
+    "from aux_fn import *"
    ]
   },
   {
@@ -672,9 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(\"--------------------------\"\\\n",
@@ -714,7 +712,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
