Removed unnecessary code

--- a/acc-analysis.ipynb
+++ b/acc-analysis.ipynb
@@ -21,7 +21,7 @@
    "outputs": [],
    "source": [
     "df = pd.read_excel(r\"\")\n",
-    "# Anomalous readings: Sixth Avenue > KAP (13), Upp Changi > Tamp East (23, 26), Tamp East > Upp Changi (24), CCK to Gombak (53), Entire NEL (67-72)\n"
+    "# Anomalous readings (Filtered by observation): Sixth Avenue > KAP (13), Upp Changi > Tamp East (23, 26), Tamp East > Upp Changi (24), CCK to Gombak (53), Entire NEL (67-72)\n"
    ]
   },
   {
@@ -43,9 +43,7 @@
    "source": [
     "# Drop readings < 500m as deemed as anomalous\n",
     "above_ground = df[(df[\"Above Ground\"]==\"Yes\") & (df[\"Distance Travelled (m)\"] > 500)]\n",
-    "below_ground = df[(df[\"Above Ground\"]==\"No\") & (df[\"Distance Travelled (m)\"] > 500)]\n",
-    "\n",
-    "# 67, 69, 70, 71, 72"
+    "below_ground = df[(df[\"Above Ground\"]==\"No\") & (df[\"Distance Travelled (m)\"] > 500)]"
    ]
   },
   {
@@ -65,31 +63,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# To shift NEL line to 'above ground' as despite travelling below_ground it is manual; UPDATE 190920: Apparently, it is AUTOMATED\n",
-    "# manual = above_ground.append(below_ground.iloc[15:19])\n",
-    "# automated = below_ground.drop([67,69,70,71,72])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# To remove samples which still appear slightly anomalous and to analyse the subset of data where dist travelled is > 700m and less than 3000m\n",
     "automated_2 = automated[automated[\"Distance Travelled (m)\"] < 3000]\n",
     "manual_2 = manual[manual[\"Distance Travelled (m)\"] < 3000]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# To manually filter out anomalous readings\n",
-    "\n",
-    "# automated_2.sort_values(by='Total Time Taken (s)', ascending=True)"
    ]
   },
   {
@@ -149,8 +125,7 @@
     "plt.xlabel(\"Total Time Taken (s)\")\n",
     "plt.ylabel(\"Mean Acceleration (ms^-2)\")\n",
     "plt.title(\"Acceleration-Time Graph\")\n",
-    "plt.gcf().set_size_inches((10, 10)) \n",
-    "print(\"Trend is very similar\")"
+    "plt.gcf().set_size_inches((10, 10)) "
    ]
   },
   {
@@ -175,7 +150,7 @@
     "plt.show()\n",
     "diff = auto_centroid_2[1] - manual_centroid_2[1]\n",
     "\n",
-    "print(f\"Mean Acceleration (Below) - Mean Acceleration (Above): {diff} [p-value = 21.0%]\")"
+    "print(f\"Mean Acceleration (Below) - Mean Acceleration (Above): {diff}\")"
    ]
   },
   {
@@ -219,179 +194,9 @@
     "Mean a (Below) = {mean_a_below}\n",
     "Mean a (Above) = {mean_a_above}\n",
     "\n",
-    "Mean v (Above) - Mean v (Below) = {mean_v_above - mean_v_below} [Negligible difference]\n",
-    "Mean a (Above) - Mean a (Below) = {mean_a_above - mean_a_below} [Negligible difference]\n",
-    "\n",
-    "Conclusion:\n",
-    "In terms of mean velocity and mean time taken, trains travelling above ground do run slower than that below ground.\n",
-    "However, based on our results, this is not significantly affected by the time trains take to accelerate.\n",
-    "However, it may be significantly affected by the time trains take to decelerate as trains travelling above ground often take a while to stop.\n",
+    "Mean v (Above) - Mean v (Below) = {mean_v_above - mean_v_below}\n",
+    "Mean a (Above) - Mean a (Below) = {mean_a_above - mean_a_below}\n",
     "''')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print((manual_pop_var_a/len(manual_2)) ** (1/2))\n",
-    "print(manual_sigma_a)\n",
-    "print((manual_pop_var_a/29) ** (1/2))\n",
-    "print((manual_pop_var_a/len(manual_2)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Initialise variables (In same code block to prevent bugs)\n",
-    "# Unbiased estimate of population mean\n",
-    "manual_mean_v = sum(manual_x) / sum(manual_t)\n",
-    "manual_mean_a = statistics.mean(manual_y)\n",
-    "auto_mean_v = sum(auto_x) / sum(auto_t)\n",
-    "auto_mean_a = statistics.mean(auto_y)\n",
-    "\n",
-    "# Sample Variance (manual: Mean v + Mean a)\n",
-    "manual_sample_var_v = statistics.variance(manual_v)\n",
-    "manual_sample_var_a = statistics.variance(manual_y)\n",
-    "\n",
-    "# Unbiased estimate of population variance\n",
-    "manual_pop_var_v = manual_sample_var_v * (len(manual_2) / (len(manual_2) - 1))\n",
-    "manual_pop_var_a = manual_sample_var_a * (len(manual_2) / (len(manual_2) - 1))\n",
-    "\n",
-    "# Sigma\n",
-    "manual_sigma_v = manual_pop_var_v ** (1/2)\n",
-    "manual_sigma_a = manual_pop_var_a ** (1/2)\n",
-    "\n",
-    "\n",
-    "# Mean Acceleration\n",
-    "\n",
-    "print(f\"Above ground sample size: {len(manual_2)}, Below ground sample size: {len(automated_2)}\")\n",
-    "\n",
-    "print(f''' \n",
-    "Traditionally, trains are human-operated. Hence our population variance and mean will be based off human-operated trains.\n",
-    "Null Hypothesis: \n",
-    "Under the assumption that H_0 is true, taking automated trains has no effect on a train's mean acceleration.\n",
-    "\n",
-    "As our sample size n = {len(manual_2)} more than / equal to 20, by Central Limit Theorem, we can assume that the distribution of sample means is approximately Normal.\n",
-    "Thus, for human-operated trains,\n",
-    "Unbiased estimate of pop mean = {manual_mean_a}\n",
-    "Unbiased estimate of pop variance = {manual_pop_var_a}\n",
-    "\n",
-    "Distribution of sample mean X_bar = N({manual_mean_a}, {manual_pop_var_a/len(manual_2)})\n",
-    "\n",
-    "Sigma = {(manual_pop_var_a/len(manual_2)) ** (1/2)}\n",
-    "\n",
-    "Mean acceleration for automated trains = {auto_mean_a}\n",
-    "\n",
-    "Using the G.C.,\n",
-    "Our p-value, P(X_bar > mean acceleration for automated trains) = 0.3258347235\n",
-    "\n",
-    "Setting a 5% level of significance (0.05), \n",
-    "H_0 cannot be rejected.\n",
-    "Hence our hypothesis is invalid.\n",
-    "\n",
-    "\n",
-    "''')\n",
-    "\n",
-    "# Mean Velocity\n",
-    "\n",
-    "print(f''' \n",
-    "Traditionally, trains are human-operated. Hence our population variance and mean will be based off human-operated trains.\n",
-    "Null Hypothesis: \n",
-    "Under the assumption that H_0 is true, automated and human-operated trains have the same mean velocity.\n",
-    "\n",
-    "As our sample size n = {len(manual_2)} more than / equal to 20, by Central Limit Theorem, we can assume that the distribution of sample means is approximately Normal.\n",
-    "Thus, for human-operated trains,\n",
-    "Unbiased estimate of pop mean = {manual_mean_v}\n",
-    "Unbiased estimate of pop variance = {manual_pop_var_v}\n",
-    "\n",
-    "Distribution of sample mean X_bar = N({manual_mean_v}, {manual_pop_var_v/len(manual_2)})\n",
-    "\n",
-    "Sigma = {(manual_pop_var_v/len(manual_2)) ** (1/2)}\n",
-    "\n",
-    "Mean velocity for automated trains = {auto_mean_v}\n",
-    "\n",
-    "Using the G.C.,\n",
-    "Our p-value, P(X_bar > mean velocity for automated trains) = 0.439472543 [Need to recalculate]\n",
-    "\n",
-    "Since ,\n",
-    "H_0 cannot be rejected. Our hypothesis is invalid.\n",
-    "\n",
-    "\n",
-    "''')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def pvalue_101(mu, sigma, samp_size, samp_mean=0, deltam=0):\n",
-    "#     np.random.seed(1234)\n",
-    "#     s1 = np.random.normal(mu, sigma, samp_size)\n",
-    "#     if samp_mean > 0:\n",
-    "#         print(len(s1[s1>samp_mean]))\n",
-    "#         outliers = float(len(s1[s1>samp_mean])*100)/float(len(s1))\n",
-    "#         print('Percentmanuale of numbers larger than {} is {}%'.format(samp_mean, outliers))\n",
-    "#         print(f'Percentmanuale of numbers smaller than {samp_mean} is {100-outliers}%')\n",
-    "#     if deltam == 0:\n",
-    "#         deltam = abs(mu-samp_mean)\n",
-    "#     if deltam > 0 :\n",
-    "#         outliers = (float(len(s1[s1>(mu+deltam)]))\n",
-    "#                     +float(len(s1[s1<(mu-deltam)])))*100.0/float(len(s1))\n",
-    "#         print('Percentmanuale of numbers further than the population mean of {} by +/-{} is {}%'.format(mu, deltam, outliers))\n",
-    "\n",
-    "#     fig, ax = plt.subplots(figsize=(8,8))\n",
-    "#     fig.suptitle('Normal Distribution: population_mean={}'.format(mu) )\n",
-    "#     plt.hist(s1)\n",
-    "#     plt.axvline(x=mu+deltam, color='red')\n",
-    "#     plt.axvline(x=mu-deltam, color='green')\n",
-    "#     plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ARCHIVED\n",
-    "# plt.scatter(below_ground_x, below_ground_v, c='b', label='Below Ground')\n",
-    "# plt.scatter(above_ground_x, above_ground_v, c='r', label='Above Ground')\n",
-    "# plt.xlabel('Distance Travelled (m)')\n",
-    "# plt.ylabel('Max Velocity (ms^-1)')\n",
-    "# plt.legend(loc='best')\n",
-    "# plt.show()\n",
-    "\n",
-    "# plt.scatter(below_ground_x, below_ground_mean_v, c='b', label='Below Ground')\n",
-    "# plt.scatter(above_ground_x, above_ground_mean_v, c='r', label='Above Ground')\n",
-    "# plt.xlabel('Distance Travelled (m)')\n",
-    "# plt.ylabel('Mean Velocity (ms^-1)')\n",
-    "# plt.legend(loc='best')\n",
-    "# plt.show()\n",
-    "\n",
-    "# plt.scatter(below_ground_x, below_ground_t, c='b', label='Below Ground')\n",
-    "# plt.scatter(above_ground_x, above_ground_t, c='r', label='Above Ground')\n",
-    "# plt.title('Time-Distance Graph')\n",
-    "# plt.xlabel('Total Distance Travelled (m)')\n",
-    "# plt.ylabel('Total Time Taken (s)')\n",
-    "# plt.legend(loc='best')\n",
-    "# plt.gcf().set_size_inches((10, 10))    \n",
-    "# plt.show()\n",
-    "\n",
-    "# plt.scatter(below_ground_t, below_ground_x, c='b', label='Below Ground')\n",
-    "# plt.scatter(above_ground_t, above_ground_x, c='r', label='Above Ground')\n",
-    "# plt.title('Distance-Time Graph')\n",
-    "# plt.xlabel('Total Time Taken (s)')\n",
-    "# plt.ylabel('Total Distance Travelled (m)')\n",
-    "# plt.legend(loc='best')\n",
-    "# plt.gcf().set_size_inches((10, 10))    \n",
-    "# plt.show()"
    ]
   }
  ],
@@ -411,7 +216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
